--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "module"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.10.2",
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
@@ -20,6 +21,7 @@
     "next-sanity": "^9.8.39",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "sanity": "^3.70.0",
     "styled-components": "^6.1.14"
