--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean": "rm -rf .next node_modules",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "import-data": "node scripts/importSanityData.mjs",
-    "type": "module"
-  },
+    "type": "module"   
+},
   "dependencies": {
     "@clerk/nextjs": "^6.10.2",
     "@sanity/client": "^6.25.0",
@@ -17,7 +18,7 @@
     "@sanity/vision": "^3.70.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
-    "next": "14.2.2",
+    "next": "^14.2.23",
     "next-sanity": "^9.8.39",
     "react": "^18",
     "react-dom": "^18",
